--- a/index.html
+++ b/index.html
@@ -442,19 +442,35 @@
 
 <body class="bg-white text-gray-800">
     <!-- Sticky header -->
-<header class="fixed inset-x-0 top-0 z-50 bg-white shadow-sm">
-  <nav class="flex items-center justify-between px-4 py-1 lg:px-6 lg:py-2">
+  <!-- <header class="fixed inset-x-0 top-0 bottom-0 shadow-sm ">
+  <nav class="flex items-center justify-between px-3 py-1 sm:px-4 sm:py-2 lg:px-6 lg:py-3"> -->
     
-    <!-- LOGO (Big but compact header) -->
-   <!-- LOGO (Centered on Mobile, Left on Desktop) -->
-<div class="flex items-center justify-center lg:justify-start flex-1">
-  <a href="/" class="flex items-center">
-    <img src="images/Pixel.png" alt="PixelCartLabs Logo"
-         class="h-32 w-auto sm:h-32 md:h-32 lg:h-32 xl:h-32" />
-   
-  </a>
-</div>
+<header id="siteHeader" class="fixed inset-x-0 top-0 z-50 bg-white shadow-sm transition-transform duration-300">
+  <nav class="flex items-center justify-between px-3 py-1 sm:px-4 sm:py-2 lg:px-6 lg:py-3">
 
+    <!-- LOGO -->
+    <div class="flex items-center justify-center lg:justify-start flex-1">
+      <a href="/" class="flex items-center">
+        <img src="images/Pixel.png" alt="PixelCartLabs Logo"
+             class="h-24 w-auto sm:h-32 md:h-24 lg:h-28" />
+    </div>
+    <!-- Nav links / hamburger remain same -->
+
+<script>
+  let lastScrollY = window.scrollY;
+  const header = document.getElementById("siteHeader");
+
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > lastScrollY) {
+      // 👉 Scrolling down → hide header
+      header.style.transform = "translateY(-100%)";
+    } else {
+      // 👉 Scrolling up → show header
+      header.style.transform = "translateY(0)";
+    }
+    lastScrollY = window.scrollY;
+  });
+</script>
 
     <!-- Desktop Navigation -->
     <div class="hidden lg:flex lg:gap-x-6 lg:items-center">
