--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
     <div class="flex items-center justify-center lg:justify-start flex-1">
       <a href="/" class="flex items-center">
         <img src="images/Pixel.png" alt="PixelCartLabs Logo"
-             class="h-24 w-auto sm:h-32 md:h-24 lg:h-28" />
+             class="h-24 w-auto sm:h-32 md:h-32 lg:h-32" />
     </div>
     <!-- Nav links / hamburger remain same -->
 
@@ -474,12 +474,12 @@
 
     <!-- Desktop Navigation -->
     <div class="hidden lg:flex lg:gap-x-6 lg:items-center">
-      <a href="#features" class="text-sm font-medium text-gray-700 hover:text-accent">Features</a>
-      <a href="#pastprojects" class="text-sm font-medium text-gray-700 hover:text-accent">Portfolio</a>
-      <a href="#process" class="text-sm font-medium text-gray-700 hover:text-accent">Process</a>
-      <a href="#pricing" class="text-sm font-medium text-gray-700 hover:text-accent">Pricing</a>
-      <a href="#faq" class="text-sm font-medium text-gray-700 hover:text-accent">FAQ</a>
-      <a href="#testimonials" class="text-sm font-medium text-gray-700 hover:text-accent">Testimonials</a>
+      <a href="#features" class="text-sm font-bold text-gray-700 hover:text-accent text-gray-900">Features</a>
+      <a href="#pastprojects" class="text-sm font-bold text-gray-700 hover:text-accent">Portfolio</a>
+      <a href="#process" class="text-sm font-bold text-gray-700 hover:text-accent">Process</a>
+      <a href="#pricing" class="text-sm font-bold text-gray-700 hover:text-accent">Pricing</a>
+      <a href="#faq" class="text-sm font-bold text-gray-700 hover:text-accent">FAQ</a>
+      <a href="#testimonials" class="text-sm font-bold text-gray-700 hover:text-accent">Testimonials</a>
     </div>
 
     <!-- Contact Button (Desktop Only) -->
@@ -502,12 +502,12 @@
     </div>
   </nav>
 
-<nav aria-label="Global" class="flex items-center justify-between p-6 lg:px-8">
+<!-- <nav aria-label="Global" class="flex items-center justify-between p-6 lg:px-8">
             <div class="flex lg:flex-1">
 
             </div>
             
-        </nav>
+        </nav> -->
 
         <!-- Mobile Menu -->
         <el-dialog>
