--- a/index.html
+++ b/index.html
@@ -445,6 +445,11 @@
   50% { transform: translateY(-10px) scale(1.1); opacity: 1; }
 }
 .animate-floatSlow { animation: floatSlow 6s ease-in-out infinite; }
+@keyframes floatSlow {
+  0%, 100% { transform: translateY(0) scale(1); opacity: .6; }
+  50% { transform: translateY(-10px) scale(1.1); opacity: 1; }
+}
+.animate-floatSlow { animation: floatSlow 6s ease-in-out infinite; }
 
     </style>
     
@@ -488,12 +493,12 @@
 
     <!-- Desktop Navigation -->
     <div class="hidden lg:flex lg:gap-x-6 lg:items-center">
-      <a href="#features" class="text-sm font-bold text-gray-700 hover:text-accent text-gray-900">Features</a>
-      <a href="#pastprojects" class="text-sm font-bold text-gray-700 hover:text-accent">Portfolio</a>
-      <a href="#process" class="text-sm font-bold text-gray-700 hover:text-accent">Process</a>
-      <a href="#pricing" class="text-sm font-bold text-gray-700 hover:text-accent">Pricing</a>
-      <a href="#faq" class="text-sm font-bold text-gray-700 hover:text-accent">FAQ</a>
-      <a href="#testimonials" class="text-sm font-bold text-gray-700 hover:text-accent">Testimonials</a>
+      <a href="#features" class="text-sm font-bold text-gray-700 hover:text-accent  hover-tilt hover:text-black hover:underline">Features</a>
+      <a href="#pastprojects" class="text-sm font-bold text-gray-700 hover:text-accent hover-tilt hover:text-black hover:underline">Portfolio</a>
+      <a href="#process" class="text-sm font-bold text-gray-700 hover:text-accent hover-tilt hover:text-black hover:underline">Process</a>
+      <a href="#pricing" class="text-sm font-bold text-gray-700 hover:text-accent hover-tilt hover:text-black hover:underline">Pricing</a>
+      <a href="#faq" class="text-sm font-bold text-gray-700 hover:text-accent hover-tilt hover:text-black hover:underline">FAQ</a>
+      <a href="#testimonials" class="text-sm font-bold text-gray-700 hover:text-accent hover-tilt hover:text-black hover:underline  ">Testimonials</a>
     </div>
 
     <!-- Contact Button (Desktop Only) -->
@@ -688,22 +693,22 @@ VANTA.NET({
 
 
 <!-- ============================= -->
-<!-- FUTURISTIC "PROCESS" SECTION -->
+<!-- FUTURISTIC PROCESS SECTION (Scroll-Animated Line) -->
 <!-- ============================= -->
 <section id="process" class="scroll-offset relative py-28 bg-[#050816] overflow-hidden">
-  <!-- Background effects -->
+  <!-- Background gradients & particles -->
   <div class="absolute inset-0 bg-[radial-gradient(circle_at_center,_#0b66ff10,_transparent_70%)]"></div>
   <div class="absolute inset-0 opacity-30 bg-[url('https://www.transparenttextures.com/patterns/asfalt-dark.png')] mix-blend-overlay"></div>
 
   <div class="relative mx-auto max-w-6xl px-6 text-center">
     <h2 class="text-sm font-semibold tracking-widest text-blue-400 uppercase">Process</h2>
     <p class="mt-2 text-4xl md:text-5xl font-extrabold text-white">How We Build Shopify Magic</p>
-    <p class="mt-4 text-gray-400 max-w-2xl mx-auto">Our process blends creativity, precision, and speed — powered by design systems and clean code.</p>
+    <p class="mt-4 text-gray-400 max-w-2xl mx-auto">A refined workflow that blends creativity, code, and conversion — powered by data & design systems.</p>
 
     <!-- Tech Pipeline -->
     <div class="relative mt-20 flex flex-col items-center lg:flex-row lg:justify-between">
-      <!-- Glowing line -->
-      <div class="absolute top-1/2 left-0 right-0 h-[3px] bg-gradient-to-r from-transparent via-blue-500/60 to-transparent animate-pulseLine hidden lg:block"></div>
+      <!-- Dynamic connector line -->
+      <div id="process-line" class="absolute top-1/2 left-0 right-0 h-[3px] bg-gradient-to-r from-transparent via-blue-500/80 to-transparent rounded-full scale-x-0 origin-left transition-transform duration-[1600ms] ease-out hidden lg:block"></div>
 
       <!-- Step 1 -->
       <div class="group relative flex flex-col items-center text-center lg:w-1/4 animate-fadeInUp">
@@ -743,7 +748,7 @@ VANTA.NET({
     </div>
   </div>
 
-  <!-- Floating particles -->
+  <!-- Floating Particles -->
   <div class="absolute inset-0 overflow-hidden">
     <div class="absolute w-2 h-2 bg-blue-400/50 rounded-full top-[20%] left-[10%] animate-floatSlow"></div>
     <div class="absolute w-2 h-2 bg-blue-300/40 rounded-full top-[40%] right-[15%] animate-floatSlow delay-1000"></div>
@@ -751,6 +756,22 @@ VANTA.NET({
   </div>
 </section>
 
+
+<script>
+// Animate the glowing process line as user scrolls
+const procLine = document.getElementById("process-line");
+if (procLine) {
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        procLine.style.transform = "scaleX(1)";
+        observer.unobserve(procLine);
+      }
+    });
+  }, { threshold: 0.3 });
+  observer.observe(procLine);
+}
+</script>
 
        
                 <!-- Past Projects Grid -->
@@ -761,8 +782,7 @@ VANTA.NET({
                             <p class="mt-2 text-3xl md:text-4xl font-bold tracking-tight text-gray-900">
                                 Real Shopify Stores We’ve Built
                             </p>
-                            <p class="mt-4 text-gray-600">A showcase of custom stores and redesigns across
-                                industries.
+                            <p class="mt-4 text-gray-600">A few snapshots of custom stores and redesigns .
                             </p>
                         </div>
 
@@ -1284,11 +1304,11 @@ function closeLightbox() {
                     <div class="flex items-center gap-3">
                         <!-- <img src="https://cdn.shopify.com/shopifycloud/brochure/assets/logo-shopify-bag-small-58b8dcfc6d4d49dcde228b8a236503d0f1e4db04f8c23f04b7416d4e9e5b07dc.png"
                             alt="logo" class="h-8" /> -->
-                        <span class="font-semibold text-white">Somanshu — Shopify Dev</span>
+                        <span class="font-semibold text-white">PixelCartLabs — Shopify Development Studio</span>
                     </div>
-                    <p class="mt-3 text-sm text-gray-400">I build fast, conversion-focused Shopify stores for brands
+                    <p class="mt-3 text-sm text-gray-400">We build fast, conversion-focused Shopify stores for brands
                         that want measurable growth.</p>
-                    <p class="mt-3 text-sm text-gray-400">hello@yourdomain.com • +91 98765 43210</p>
+                    <p class="mt-3 text-sm text-gray-400">hello@yourdomain.com • +91 9582528062</p>
                 </div>
 
                 <nav class="flex gap-6">
@@ -1317,7 +1337,7 @@ function closeLightbox() {
 <!-- Sticky Contact Button (Mobile Only - Bottom Right) -->
 <!-- Sticky Contact Button (Mobile Only - Top Right) -->
 <a href="#contact"
-   class="fixed bottom-20 right-6 z-50 flex items-center justify-center w-14 h-14 rounded-full bg-gray-200 text-white shadow-lg lg:hidden hover:scale-105 transition transform">
+   class="fixed bottom-20 right-6 z-50 flex items-center justify-center w-14 h-14 rounded-full bg-gray-200 text-white shadow-lg  hover:scale-105 transition transform">
    📞 
 </a>
 
