--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ function closeLightbox() {
 
                 <nav class="flex gap-6">
                     <a href="#features" class="text-sm hover:text-white">Features</a>
-                    <a href="#portfolio" class="text-sm hover:text-white">Portfolio</a>
+                    <a href="#pastprojects" class="text-sm hover:text-white">Portfolio</a>
                     <a href="#pricing" class="text-sm hover:text-white">Pricing</a>
                     <a href="#faq" class="text-sm hover:text-white">FAQ</a>
                 </nav>
@@ -1321,7 +1321,7 @@ function closeLightbox() {
 
             <div
                 class="mt-8 border-t border-gray-800 pt-6 flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
-                <p class="text-sm text-gray-500">© <span id="year"></span> Somanshu. All rights reserved.</p>
+                <p class="text-sm text-gray-500">© <span id="year"></span> PixelCartLabs. All rights reserved.</p>
                 <div class="flex items-center gap-4">
                     <a href="#" class="text-sm text-gray-400 hover:text-white">Privacy</a>
                     <a href="#" class="text-sm text-gray-400 hover:text-white">Terms</a>
