--- a/index.html
+++ b/index.html
@@ -1193,19 +1193,19 @@ function closeLightbox() {
     <section id="testimonials" class="scroll-offset bg-white py-16 sm:py-20">
         <div class="mx-auto lg-fix-max-width px-6 lg:px-8 text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900">What clients say</h2>
-            <p class="mt-3 text-gray-600">Trusted by founders and small brands.</p>
+            <p class="mt-3 text-gray-600">Trusted by founders and brands.</p>
 
             <div class="mt-8 grid gap-6 md:grid-cols-3">
                 <blockquote class="rounded-lg bg-gray-50 p-6 shadow-md text-left">
                     <p class="text-gray-700">“We wanted a professional Shopify store to take our business online. PixelCartLabs delivered beyond expectations — powerful design, fast performance, and easy management. Highly recommended!”</p>
                     <p>⭐️⭐️⭐️⭐️⭐️</p>
-                    <footer class="mt-4 text-sm font-semibold text-gray-900">— Emma, Skincare Founder</footer>
+                    <footer class="mt-4 text-sm font-semibold text-gray-900">— Emma, Clothing Brand Founder</footer>
                 </blockquote>
 
                 <blockquote class="rounded-lg bg-gray-50 p-6 shadow-md text-left">
                     <p class="text-gray-700">“Our old site was slow and messy. They rebuilt everything from scratch — optimized product pages, improved checkout, and mobile design. Now 70% of our traffic comes from mobile and we are scaling fast!”</p>
                      <p>⭐️⭐️⭐️⭐️⭐️</p>
-                    <footer class="mt-4 text-sm font-semibold text-gray-900">— Josh, Apparel Brand</footer>
+                    <footer class="mt-4 text-sm font-semibold text-gray-900">— Josh, Apparel Brand Founder</footer>
                 </blockquote>
 
                 <blockquote class="rounded-lg bg-gray-50 p-6 shadow-md text-left">
@@ -1240,7 +1240,7 @@ function closeLightbox() {
             </h2>
             <p class="mt-3 text-white/90">Limited slots to keep quality high. You’ll get a straight action plan you
                 can implement.</p>
-            <!-- <div class="mt-6"><a href="mailto:hello@yourdomain.com"
+            <!-- <div class="mt-6"><a href="mailto:somanshu10@gmail.com"
                     class="inline-block rounded-md px-6 py-3 bg-white text-accent font-semibold">Email to book</a> -->
             </div>
         </div>
@@ -1308,7 +1308,9 @@ function closeLightbox() {
                     </div>
                     <p class="mt-3 text-sm text-gray-400">We build fast, conversion-focused Shopify stores for brands
                         that want measurable growth.</p>
-                    <p class="mt-3 text-sm text-gray-400">hello@yourdomain.com • +91 9582528062</p>
+                    <p class="mt-3 text-sm text-gray-400">somanshu10@gmail.com 
+                        <p>+91 9582528062
+                        </p></p>
                 </div>
 
                 <nav class="flex gap-6">
@@ -1324,7 +1326,7 @@ function closeLightbox() {
                 <p class="text-sm text-gray-500">© <span id="year"></span> PixelCartLabs. All rights reserved.</p>
                 <div class="flex items-center gap-4">
                     <a href="privacy.html" class="text-sm text-gray-400 hover:text-white">Privacy</a>
-                    <a href="#" class="text-sm text-gray-400 hover:text-white">Terms</a>
+                    <a href="terms.html" class="text-sm text-gray-400 hover:text-white">Terms</a>
                     <a href="#" class="text-sm text-gray-400 hover:text-white">Contact</a>
                 </div>
             </div>
