--- a/privacy.html
+++ b/privacy.html
@@ -93,7 +93,7 @@
 
       <div>
         <h2 class="text-xl font-semibold text-gray-900 mb-2">8. Your Rights</h2>
-        <p>You may request access, correction, or deletion of your personal data at any time. To exercise your rights, contact us at <a href="mailto:hello@yourdomain.com" class="text-accent hover:underline">hello@yourdomain.com</a>.</p>
+        <p>You may request access, correction, or deletion of your personal data at any time. To exercise your rights, contact us at <a href="mailto:somanshu10@gmail.com" class="text-accent hover:underline">somanshu10@gmail.com</a>.</p>
       </div>
 
       <div>
@@ -115,7 +115,7 @@
         <h2 class="text-xl font-semibold text-gray-900 mb-2">12. Contact Us</h2>
         <p>If you have any questions or concerns, please contact us at:</p>
         <p class="mt-3">
-          📧 <a href="mailto:hello@yourdomain.com" class="text-accent hover:underline">hello@yourdomain.com</a><br>
+          📧 <a href="mailto:somanshu10@gmail.com" class="text-accent hover:underline">somanshu10@gmail.com</a><br>
           📞 +91 9582528062<br>
           🌐 <a href="index.html" class="text-accent hover:underline">PixelCartLabs.com</a>
         </p>
