--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@ function closeLightbox() {
                 <div class="flex items-center gap-4">
                     <a href="privacy.html" class="text-sm text-gray-400 hover:text-white">Privacy</a>
                     <a href="terms.html" class="text-sm text-gray-400 hover:text-white">Terms</a>
-                    <a href="#" class="text-sm text-gray-400 hover:text-white">Contact</a>
+                    <a href="#contact" class="text-sm text-gray-400 hover:text-white">Contact</a>
                 </div>
             </div>
         </div>
