--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ fbq('track', 'PageView');
 src="https://www.facebook.com/tr?id=806840448945200&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-<!-- End Meta Pixel Code -->
+<!-- End Meta Pixel Code 9-->
     <style>
         :root {
             --accent: #082041;
