--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@ function closeLightbox() {
     <!-- Pricing -->
     <section id="pricing" class="scroll-offset bg-gray-900 px-6 py-16 sm:py-20 lg:px-8">
         <div class="mx-auto max-w-4xl text-center">
-            <h2 class="text-white text-base font-semibold text-accent">Pricing</h2>
+            <h2 class="text-white text-base font-semibold ">Pricing</h2>
             <p class="mt-2 text-3xl md:text-4xl font-bold tracking-tight text-white">Simple, transparent plans</p>
             <p class="mx-auto mt-4 max-w-2xl text-gray-300">We have plans for all needs according to client's budget.</p>
 
@@ -1157,7 +1157,7 @@ function closeLightbox() {
                     
                 </div>
                 <div class="pricing-glow rounded-3xl bg-white/5 p-6 ring-1 ring-white/10">
-                    <h3 class="text-lg font-semibold text-white text-accent">Full Rebuild</h3>
+                    <h3 class="text-lg font-semibold text-white ">Full Website</h3>
                     <p class="mt-3 text-3xl font-bold text-white"></p>
                     <p class="mt-3 text-gray-300">Complete design + development for fast growth.</p>
                     <ul class="mt-4 text-sm text-gray-300 space-y-2">
