--- a/index.html
+++ b/index.html
@@ -1349,19 +1349,13 @@ function closeLightbox() {
 
     <!-- Sticky Contact Button -->
 <!-- Sticky Contact Button (Mobile Only) -->
-<!-- Sticky Contact Button (Mobile Only - Bottom Right) -->
-<!-- Sticky Contact Button (Mobile Only - Bottom Right) -->
-<!-- Sticky Contact Button (Mobile Only - Top Right) -->
-<a href="#contact"
+
+<a href="https://wa.me/9582528062" target="_blank" rel="noopener"
    class="fixed bottom-20 right-6 z-50 flex items-center justify-center w-14 h-14 rounded-full bg-gray-200 text-white shadow-lg  hover:scale-105 transition transform">
    📞 
 </a>
 
 
-
-
-   ✉️
-</a>
 
 
 
